refactor api register and approval status
